<resources>

    <!--MAIN SCREEN-->
    <string name="main_btn_fitness_desc">Fitness Button</string>

    <!--FITNESS SCREEN-->
    <string name="fit_et_workout_name_hint">Workout Name</string>
    <string name="fit_edit_tog_on">Edit Mode: On</string>
    <string name="fit_edit_tog_off">Edit Mode: Off</string>
    <string name="fit_btn_load">Load Previous Workout</string>
    <string name="fit_btn_save">Save Workout</string>

    <string name="app_name">hackout</string>

    <!--COLORS-->
    <color name="teal">#82C9C7</color>
    <color name="orange">#F68C3D</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="transparent">#00000000</color>
    <color name="grey">#33000000</color>
    <color name="light_grey">#11000000</color>
    <color name="light_teal">#C7E8E7</color>
    <color name="blue">#547DBF</color>
    <color name="light_blue">#FF83CBFF</color>
    <color name="beige">#E4CBA7</color>
    <color name="green">#91D3B7</color>
    <color name="light_green">#A8DDC4</color>
    <color name="dark_green">#66C19D</color>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fitness">Fitness</string>
</resources>
